--- a/templates/tatu/contact.html
+++ b/templates/tatu/contact.html
@@ -11,14 +11,14 @@
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		
-		<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %} ">
+
 
 	</head>
 	
 	<body>
-	<center><div ><img src="{% static "images/logo.png" %} " alt="logo" width="15%"></div></center>
+	<center><div ><a href="{% url 'index' %}"><img src="{% static "images/logo.png" %} " alt="logo" width="10%"></div></a></center>
 
-	<div class="midbox">
+	<center><div >
 		
 			<h3>WAD2 Team A </h3><br />
 			Level 7, Boyd Orr Building, University of Glasgow<br />
@@ -34,29 +34,8 @@
 </form>
 		
     
-	</div>
-
-
-
-
-	<center>  <div class="botline">
-		<ul class="list-inline">
-			<li> <a href='/tatu/'>Home</a></li>
-			<li> | </li>
-			<li> <a href='/tatu/contact-us/'>Contact us</a></li>
-			<li> | </li>
-			<li> <a href='/tatu/faq/'>FAQ </a></li>
-			<li> | </li>
-			<li> <a href='/tatu/register/'>Register </a></li>
-			<li> | </li>
-			<li> <a href='/tatu/login/'>Login </a></li>
-			<li> | </li>
-			<li> <a href='/tatu/artists/'>Artists </a></li>
-			<li> | </li>
-			<li> <a href='/tatu/tattoos/'>Tattoos </a></li>
-
-		</ul>
 	</div></center>
+
 
 	</body>
 	
