--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -19,7 +19,7 @@ html,body {
 .top_zone{
     position: relative;
     width: 500px;
-    height: 180px;
+    height: 200px;
     margin-left: auto;
     margin-right: auto;
 
@@ -32,4 +32,47 @@ html,body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.dropbtn {
+    background-color: transparent;
+    color: black;
+    width: 5%;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    font-family: Arial;
+    text-transform: uppercase;
+
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: transparent;
 }
