--- a/templates/tatu/index.html
+++ b/templates/tatu/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 {% load staticfiles %} <!-- New line -->
 <html>
 	<head>
 		<title>Tatu</title>
-		
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,19 +15,25 @@
 	</head>
 	
 	<body>
-	    <div class="navi">
+
+    <div class="dropdown">
+        <button class="dropbtn"><img src="{% static "images/menu.png" %} " alt="logo" width="100%"></button>
+        <div class="dropdown-content">
+
             {% if user.is_authenticated %}
-            <a href='{% url 'profile' current.id %}'>profile | </a>
-            <a href="{% url 'logout' %}">logout | </a>
+            <a href='{% url 'profile' current.id %}'>Profile  </a>
+            <a href="{% url 'logout' %}">Logout </a>
             {% else %}
-            <a href='/tatu/login/'>Login | </a>
-            <a href='/tatu/register/'>Register | </a>
-            {% endif %}
+            <a href='/tatu/login/'>Login  </a>
+            <a href='/tatu/register/'>Register  </a>
+            {% endif %}<a href='/tatu/navigate/'>Tattoos </a>
 
-            <a href='/tatu/navigate/'>Tattoos | </a>
+
             <a href='/tatu/contact-us/'>Contact us</a>
-
         </div>
+    </div>
+
 	</body>
-	
+
+
 </html>
