--- a/templates/tatu/register.html
+++ b/templates/tatu/register.html
@@ -14,6 +14,23 @@
 </head>
 
 <body>
+<div class="dropdown">
+    <button class="dropbtn"><img src="{% static "images/menu.png" %} " alt="logo" width="100%"></button>
+    <div class="dropdown-content">
+
+        {% if user.is_authenticated %}
+        <a href='{% url 'profile' current.id %}'>Profile  </a>
+        <a href="{% url 'logout' %}">Logout </a>
+        {% else %}
+        <a href='/tatu/login/'>Login  </a>
+
+        {% endif %}<a href='/tatu/navigate/'>Tattoos </a>
+        <a href="{% url 'index' %}">Index </a>
+
+
+        <a href='/tatu/contact-us/'>Contact us</a>
+    </div>
+</div>
 
 <div class="navi">
     {% if registered %}
