--- a/templates/tatu/upload.html
+++ b/templates/tatu/upload.html
@@ -22,6 +22,6 @@
 
             {{ post_form.as_p }}
 
-        <input type="submit" name="submit" value="Upload" />
+        <input type="submit" name="submit" value="Upload" /><a href='/tatu/'>Return to index </a>
         </form>
 </div>
